Fix hover not showing the right colors

--- a/src/assets/scss/custom/components/_calendar.scss
+++ b/src/assets/scss/custom/components/_calendar.scss
@@ -42,7 +42,6 @@
 
 .calendar-day:hover,
 .btn:hover {
-    background-color: $primary !important;
     transform: scale(1.1);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     opacity: 0.7;
